@@ -1,10 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.487 2005/11/19 20:40:29 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.488 2005/11/20 17:24:33 codeman Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
+  20 Nov 2005; Preston Cody <codeman@gentoo.org>
+  converted gli-dialog to use the install_package_list.
+  gtkfe has already been converted by AllanonJL
+  
   19 Nov 2005; Preston Cody <codeman@gentoo.org>
   get_install_package_list added to InstallProfile.  This can be used by the FEs
 
